--- a/intelligNET/app/src/main/res/values/strings.xml
+++ b/intelligNET/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
-    <string name="app_name">IntelligNET</string>
+    <string name="app_name">NET-אינטליג</string>
     <string name="ad">פרסומת</string>
+    <string name="easyTab">קל</string>
+    <string name="mediumTab">בינוני</string>
+    <string name="hardTab">קשה</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_tashchez_pl">TashchezPL</string>
+
+
+
 </resources>
