--- a/intelligNET/app/src/main/res/values/strings.xml
+++ b/intelligNET/app/src/main/res/values/strings.xml
@@ -50,9 +50,7 @@
     <string name="gender">מין: זכר או נקבה</string>
     <string name="errFirstNamelimits">שם פרטי חייב להיות בין 2 ל15 תווים</string>
     <string name="errLastNamelimits">שם משפחה חייב להיות בין 2 ל15 תווים</string>
-    <string name="errBirthdayYear">הכנס שנה תקנית לפי התבנית הבאה YYYY</string>
-    <string name="errBirthdayMonth">הכנס חודש תקני לפי התבנית הבאה MM</string>
-    <string name="errBirthdayDay">הכנס יום תקני לפי התבנית הבאה DD</string>
-    <string name="errGenderValid">הכנס "זכר" או "נקבה"</string>
+    <string name="errBirthdayInvalid">הכנס שנה תקנית לפי התבנית הבאה YYYY</string>
+    <string name="errGenderInvalid">הכנס "זכר" או "נקבה"</string>
 
 </resources>
