--- a/intelligNET/app/src/main/res/values/strings.xml
+++ b/intelligNET/app/src/main/res/values/strings.xml
@@ -53,4 +53,9 @@
     <string name="errBirthdayInvalid">אנא הזן תאריך תקני</string>
     <string name="errGenderInvalid">הכנס "זכר" או "נקבה"</string>
 
+
+
+    <!--ads-->
+    <string name="banner_ad_unit_id">/6499/example/banner</string>
+
 </resources>
